fix problem with z-index of menu slide

--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,6 +1,7 @@
 @import "../../var.sass"
 
 .header
+  z-index: 999
   background: url(../../img/header-img.jpg) no-repeat
   background-position: top
   display: flex
